# ji-lattice-plugin

./: .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md
.github/workflows/: build-pr.yml  build-release.yml  code-checks.yml
cmake/: basic-installer.cmake
resources/installer_win/: jilattice64.iss
src/: EveryComponent.h  JIComponent.h  JIMath.h  LatticeComponent.h  LatticesEditor.cpp  LatticesEditor.h  LatticesProcessor.cpp  LatticesProcessor.h  MIDIMenuComponent.h  MIDISelectComponent.h  ModeComponent.h  OriginComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaleData.h  Visitors.h  VisitorsComponent.h  version.cpp.in  version.h
src/Components/: LatticeComponent.h  LatticesColours.h  MTSWarningComponent.h  MenuBarComponent.h  OriginComponent.h  VisitorsComponent.h
src/MenuComponents/: MIDIMenuComponent.h  MenuBarComponent.h  ModeComponent.h  OriginComponent.h  SettingsComponent.h  VisitorsComponent.h
